<resources>
    <string name="settings">Settings</string>
    <string name="calibrate">Calibrate</string>
    <string name="analyzingWait">Analyzing…</string>
    <string name="calibrate_info">Ensure cartridge is attached correctly and press OK</string>
    <string name="appUpdate">Caddisfly update</string>
    <string name="askForUpdate">An updated version is available, Do you want to update now?</string>
    <string name="seconds">seconds</string>
    <string name="minutes">minutes</string>
    <string name="checkUpdate">Check update</string>
    <string name="internetConnectionRequired">Internet connection is required. Connect to a data network.</string>
    <string name="dataConnection">Data Connection</string>
    <string name="testInProgress">Test in progress</string>
    <string name="alreadyHaveLatest">You already have the latest version of Caddisfly installed</string>
    <string name="remaining">remaining</string>
    <string name="result">Result</string>
    <string name="rgb">rgb</string>
    <string name="ppm">ppm</string>
    <string name="checkingForUpdates">Checking for updates…</string>
    <string name="starting">Starting…</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="outOfRange">Color out of range</string>
    <string name="help">Help</string>
    <string name="placeDeviceInStand">Place the phone on a flat surface to continue</string>
    <string name="shakeToContinue">Shake the phone to ensure proper mixing of the solution</string>
    <string name="shakeMe">Shake Me</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="prototype">Prototype</string>
    <string name="alpha">Alpha</string>
    <string name="testFailedMessage">Solution color out of range. Check cartridge placement.</string>
    <string name="testFailedQualityMessage">Photo quality below %d%%. Check cartridge placement.</string>
    <string name="done">Done</string>
    <string name="gettingUpdate">Getting Caddisfly update…</string>
    <string name="calibrate_error">Caddisfly calibration is incomplete. Correct the calibration before starting a test.</string>
    <string name="enableInternet">Internet connection required</string>
    <string name="noInternet">Internet connection not found</string>
    <string name="photoQuality">Photo quality</string>
    <string name="photoQualityError">Photo quality too low</string>
    <string name="connecting">Connecting…</string>
    <string name="analyze">Analyze</string>
    <string name="minPhotoQuality">Minimum Photo Quality</string>
    <string name="clickAnalyze">Click Analyze to continue</string>
    <string name="notCalibrated">Not Calibrated</string>
    <string name="invalidColor">Invalid Color value</string>
    <string name="selectValueToCalibrate">Select a value to calibrate</string>
    <string name="startSurvey">Start Survey</string>
    <string name="startTest">Start Test</string>
    <string name="installAkvoFlow">Please install Akvo Flow app</string>
    <string name="waterQualityTest">Water Quality Test</string>
    <string name="attachStandardCartridge">Attach a standard solution cartridge for this value and press Calibrate</string>
    <string name="analysisInProgress">Analysis in progress</string>
    <string name="importFromCaddisfly">This will import calibration colors from Caddisfly and overwrite the current values.</string>
    <string name="importAction">Import</string>
    <string name="updateRequired">Please update to a newer version to enable this feature</string>
    <string name="fluoride">Fluoride</string>
    <string name="fluoride2">Fluoride 7 Step</string>
    <string name="bacteria">Bacteria</string>
    <string name="pH">pH</string>
    <string name="cropToSquare">Crop photo to square</string>
    <string name="ignoreCalibrationErrors">Ignore calibration errors</string>
    <string name="calibrationColorError">The calibrated color seems to be incorrect. Recalibrate with the provided standard solutions.</string>
    <string name="outOfSequence">Out of Sequence</string>
    <string name="duplicateSwatch">Duplicate or similar color</string>
    <string name="appName">Caddisfly</string>
    <string name="about">About</string>
    <string name="bacteriaTest">Bacteria Test</string>
    <string name="swatches">Swatches</string>
    <string name="working">Working</string>
    <string name="send">Send</string>
    <string name="photo">Photo</string>
    <string name="delete">Delete</string>
    <string name="noData">No locations yet.</string>
    <string name="pressNewLocation">Press \'New Location\' button</string>
    <string name="interval_info">Duration to wait after each analysis</string>
    <string name="details">Details</string>
    <string name="selectNumberOfTests">Select how many times to analyze</string>
    <string name="reset">Reset</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="selectTestType">Select type</string>
    <string name="analysisCount">Analysis count</string>
    <string name="place">Place</string>
    <string name="sourceType">Source type</string>
    <string name="selectSourceType">Select Source Type</string>
    <string name="waterQualitySystem">Water Quality System</string>
    <string name="general">General</string>
    <string name="shakeDevice">Require shake to analyze</string>
    <string name="shakeDeviceSummary">To ensure proper mixing of solution.</string>
    <string name="soundAlarm">Alarm when shake needed</string>
    <string name="soundAlarmSummary">An alarm to notify that a shake is needed before each analysis.</string>
    <string name="selectedWillBeDeleted">Selected items will be deleted</string>
    <string name="language">Language</string>
    <string name="interval">Interval</string>
    <string name="intervalMinutes">Interval (minutes)</string>
    <string name="futureFeature">Future Feature</string>
    <string name="featureNotImplemented">Feature not yet implemented</string>
    <string name="just_now">just now</string>
    <string name="yesterday">yesterday</string>
    <string name="locale">Locale</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="dayTheme">Day Theme</string>
    <string name="nightTheme">Night Theme</string>
    <string name="newLocation">New Location</string>
    <string name="notes">Notes</string>
    <string name="selectLocation">Select location for test</string>
    <string name="locationDetails">Location Details</string>
    <string-array name="source_types">
        <item>Hand Pump</item>
        <item>Tube Well</item>
        <item>River / Stream</item>
        <item>Open Well</item>
        <item>Domestic Tap</item>
        <item>Reservoir / Pond / Lake</item>
        <item>Industrial</item>
        <item>Other</item>
    </string-array>
    <string name="camera">Camera</string>
    <string name="cameraZoom">Camera Zoom</string>
    <string name="zoom">Zoom (obsolete)</string>
    <string name="other">Other</string>
    <string name="locations">Locations</string>
    <string name="startNewTest">Start New Test</string>
    <string name="closeLocationSurvey">This survey will be closed and data entered will be lost</string>
    <string name="closeSurvey">Close Survey</string>
    <string name="incomplete">Incomplete</string>
    <string name="incompleteMessage">Please enter a place name</string>
    <string name="result_sent">Test details successfully sent to the server</string>
    <string name="success">Success</string>
    <string name="send_failed">Send failed due to server problem. Try again later.</string>
    <string name="waterSourceLocation">Water Source Location</string>
    <string name="standNearWaterSource">Stand near the water source.</string>
    <string name="ensureClearViewForGPS">Ensure that there is a clear view of the sky to receive GPS signals</string>
    <string name="getLocation">Get Location</string>
    <string name="gettingLocation">Getting location…</string>
    <string name="takeSourcePhoto">Take Photo of Water Source</string>
    <string name="playCameraSound">Camera sound</string>
    <string name="autoAnalyze">Auto Analyze on Preview</string>
    <string name="street">Street</string>
    <string name="town">Town</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="cloudy">Cloudy</string>
    <string name="torchMode">Torch Mode</string>
    <string name="infinity">Infinity</string>
    <string name="edit">Edit</string>
    <string name="samplingCount">Sampling Count</string>
    <string name="selectNumberOfSamples">Number of times the solution should be sampled</string>
    <string name="developer">Developer</string>
    <string name="samplingSummary">photos will be taken for each analysis. Result will be an average.</string>
    <string name="enterColorRgb">Enter color rgb</string>
    <string name="saveOriginalPhoto">Save Original Photo</string>
    <string name="saveOriginalPhotoConfirm">Warning: Saving original photos will use a lot of space on your phone.</string>
    <string name="photoSampleDimensionMessage">Select the length to crop the photo for analysis</string>
    <string name="photoSampleDimension">Photo Sample Dimension</string>
    <string name="sending">Sending</string>
    <string name="versionStringFormat">%1$s %2$s</string>
    <string name="current">Current</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="name">Name</string>
    <string name="noSavedCalibrations">There are no previously saved calibrations</string>
    <string name="notFound">Not Found</string>
    <string name="giveNameForCalibration">Give a descriptive name for this calibration</string>
    <string name="saveCalibration">Save Calibration</string>
    <string name="loadCalibration">Load Calibration</string>
    <string name="invalidName">Invalid name</string>
    <string name="overwriteFile">Overwrite File</string>
    <string name="nameAlreadyExists">Name already exists. Overwrite file?</string>
    <string name="calibrateNow">Calibrate Now</string>
    <string name="calibrationRequired">Calibration Required</string>
    <string name="backToSurvey">Back to Survey</string>
    <string name="testInterrupted">Test was interrupted. Please do not move the phone during the test.</string>
    <string name="welcome">Welcome to Akvo Caddisfly</string>
    <string name="toBeginCalibrate">To begin please calibrate Caddisfly</string>
    <string name="useSolutionsProvided">Use the pink and yellow standard solutions provided in the kit</string>
    <string name="pink">Pink</string>
    <string name="yellow">Yellow</string>
    <string name="revertVersion">Revert to previous version</string>
    <string name="appVersion">App version</string>
    <string name="revertingVersion">Reverting to previous version</string>
    <string name="waitTillCameraSound">Then wait for the camera sound in about a minute</string>
    <string name="calibrateSummary">Use the standard color mixtures provided in the kit to calibrate this phone</string>
    <string name="revertSummary">If the current version is not working correctly, temporarily revert to a previous version</string>
    <string name="aboutSummary">Displays version number</string>
    <string name="checkUpdateSummary">Check if an update is available for Akvo Caddisfly</string>
    <string name="next">Next</string>
    <string name="sevenStepCalibration">Seven step calibration</string>
    <string name="preparation">Preparation</string>
    <string name="fillCartridge">Fill cartridge with source water</string>
    <string name="placeReagent">Place an unused reagent dispenser into the cartridge and close lid</string>
</resources>