<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) TernUp Research Labs
  ~
  ~ This file is part of Caddisfly
  ~
  ~ Caddisfly is free software: you can redistribute it and modify it under the terms of
  ~ the GNU Affero General Public License (AGPL) as published by the Free Software Foundation,
  ~ either version 3 of the License or any later version.
  ~
  ~ Caddisfly is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~ without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU Affero General Public License included below for more details.
  ~
  ~ The full license text can also be seen at <http://www.gnu.org/licenses/agpl.html>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/activity_horizontal_margin">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:lineSpacingExtra="8sp"
              android:text="@string/waterSourceLocation"
              android:layout_marginBottom="15dp"
              android:gravity="center_vertical"
              android:drawablePadding="4dp"
              android:textStyle="bold"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textSize="18sp"
              android:lineSpacingExtra="8sp"
              android:text="@string/standNearWaterSource"
              android:layout_marginBottom="10dp"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textSize="18sp"
              android:lineSpacingExtra="8sp"
              android:text="@string/ensureClearViewForGPS"
              android:layout_marginBottom="10dp"/>

    <Button
            android:id="@+id/locationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getLocation"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="#eee"
            android:background="@drawable/blue_button"/>


    <TextView
            android:id="@+id/lat_lng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:id="@+id/progressBar"
                  android:visibility="gone"
            >

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="false"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/gettingLocation"
                tools:ignore="UnusedAttribute"/>

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="visible"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_gravity="center"/>

    </LinearLayout>


</LinearLayout>
