<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) TernUp Research Labs
  ~
  ~ This file is part of Caddisfly
  ~
  ~ Caddisfly is free software: you can redistribute it and modify it under the terms of
  ~ the GNU Affero General Public License (AGPL) as published by the Free Software Foundation,
  ~ either version 3 of the License or any later version.
  ~
  ~ Caddisfly is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~ without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU Affero General Public License included below for more details.
  ~
  ~ The full license text can also be seen at <http://www.gnu.org/licenses/agpl.html>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="@dimen/activity_horizontal_margin"
              android:weightSum="1"
              android:id="@+id/linearLayout"
        >

    <TextView
            tools:text="@string/bacteria"
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#454545"
            android:textSize="40sp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/testInProgress"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#777777"
            android:textSize="17sp"/>

    <TextView
            android:id="@+id/placeInStandText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:text="@string/placeDeviceInStand"
            tools:text="Place the phone in its stand to continue"
            android:gravity="center"
            android:layout_marginTop="100dp"
            android:visibility="gone"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/progressLayout">

        <TextView
                android:id="@+id/remainingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-20dp"
                android:layout_marginTop="25dp"
                android:gravity="center_horizontal"
                android:textSize="100sp"
                tools:text="9"/>

        <TextView
                android:id="@+id/subtitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="@string/remaining"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="17sp"/>

        <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="50dp"/>

        <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:alpha="0.8"
                android:contentDescription="@null"
                android:src="?alarm"/>

        <TextView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/starting"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/shakeLayout"
            android:visibility="visible">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/shake_phone"
                android:visibility="visible"
                android:contentDescription="@null"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shakeMe"
                android:textSize="50sp"
                android:gravity="center_horizontal"
                android:visibility="visible"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shakeToContinue"
                android:textSize="18sp"
                android:gravity="center"
                android:visibility="visible"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:padding="5dp"/>

    </LinearLayout>

</LinearLayout>
